chore: dockerfile에서 멀티 스테이지 빌드를 실행하도록 수정